--- a/src/lib/PDFresultModal.scss
+++ b/src/lib/PDFresultModal.scss
@@ -17,18 +17,25 @@ $commonborder : 1px solid #7367f0;
   z-index: 2000;
 
   display: flex;
-  justify-content: center;
+  justify-content:flex-start;
   align-items: center;
   box-sizing: border-box;
+  overflow:auto;
 
   .ResultWrap {
-    width: 500px;
-    height: 500px;
+    
+    margin : auto;
+    width: 1000px;
+    height: 600px;
     // left:0;
     // position:absolute;
-    // background:green;
+    // top: 0;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
+    position:relative;
     box-sizing: border-box;
-    // padding:10px;
+  
     display: flex;
     justify-content: center;
     align-items: center;
@@ -236,7 +243,7 @@ $commonborder : 1px solid #7367f0;
   .moveableBarwrapper {
     box-sizing: border-box;
     outline: 3px solid #7367f0;
-    ;
+
 
     .header {
       box-sizing: border-box;
