--- a/src/lib/PDFresultModal.scss
+++ b/src/lib/PDFresultModal.scss
@@ -267,6 +267,8 @@ $commonborder : 1px solid #7367f0;
         background-color: transparent;
         font-size: 24px;
         color: white;
+        min-width:5px;
+        min-height:5px;
 
         &:hover {
           color: rgb(180, 180, 180);
@@ -295,7 +297,7 @@ $commonborder : 1px solid #7367f0;
           // background: pink;
           box-sizing: border-box;
           width: 100%;
-          height: calc(100% - 150px);
+          height: calc(100% - 100px);
           border-bottom: 3px solid #7367f0;
           overflow-y: auto;
 
@@ -425,7 +427,7 @@ $commonborder : 1px solid #7367f0;
 
         .GC-playzone {
           box-sizing: border-box;
-          height: 150px;
+          height: 100px;
           width: 100%;
           background: rgba(0, 0, 0, 0.85);
           color:white;
@@ -436,8 +438,8 @@ $commonborder : 1px solid #7367f0;
             align-items: center;
 
             .GC-playbtn {
-              width: 100px;
-              height: 100px;
+              width: 50px;
+              height: 50px;
               border-radius: 50%;
               outline: none;
               background-color: #7367f0;
@@ -457,19 +459,19 @@ $commonborder : 1px solid #7367f0;
               &:before {
                 content: "";
                 position: absolute;
-                top: 30px;
-                left: 34px;
+                top: 15px;
+                left: 17px;
                 height: 0;
                 border-style: solid;
-                border-width: 20px 0 20px 40px;
+                border-width: 10px 0 10px 20px;
                 border-color: transparent transparent transparent #fff;
                 /* icon color */
                 transition: 0.218s ease, background-color 0s;
               }
 
               &.playing:before {
-                height: 39px;
-                border-width: 0 0 0 32px;
+                height: 19.5px;
+                border-width: 0 0 0 16px;
               }
 
               &:after {
@@ -477,14 +479,14 @@ $commonborder : 1px solid #7367f0;
                 position: absolute;
                 background: inherit;
                 width: 0;
-                height: 40px;
-                top: 30px;
-                left: 45px;
+                height: 20px;
+                top: 15px;
+                left: 22.5px;
                 transition: 0.218s ease, background-color 0s;
               }
 
               &.playing:after {
-                width: 10px;
+                width: 5px;
               }
             }
           }
